# neuradicon

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run_docker.sh
domains_scripts/: anat_domain_assignment.py  create_domain_patterns.py  create_patterns_from_lasso.py  domain_assignment.py  evaluate_domain_detector.py  evaluate_domain_ruler.py  path_domain_assign.py  review_normal_pathologies.py
examples/: example_script.py
notebooks/: check_contrast.py  create_cluster_plot.py  get_stroke_nn.py  merge_human_domain_labels.py  normality_analysis.py  plot_icd10.py  report_corpus_analysis.py  service_analysis_beta.py  spm_visualizations.py  svd_vs_stroke.py  visualizations.py  walter_analysis.py
scripts/: anat_domain_assignment.py  compare_model_errors.py  create_domain_patterns.py  create_json_from_pattern_csv.py  descriptor_domain_definition.py  domain_assignment.py  domain_label_analysis.py  evaluate_domain_detector.py  path_domain_assign.py  rerun_domains.py  review_normal_pathologies.py  train_cls.py  train_neg.py  train_ner.py  train_report_ae.py  try_vector_domains.py
src/neuradicon/: custom_pipes.py  models.py  preprocess.py
src/neurocluster/: predictors.py  vectorizers.py
src/neurollm/: preprocess_cls_data.py  preprocess_neg_data.py  preprocess_ner_data.py  preprocess_seg_data.py  train_segmentation.py  utils.py
tests/: test_cluster_utils.py  test_custom_pipes.py  test_models.py  test_preprocess.py  test_utils.py  test_vectorizers.py
