[project]
name = "neuradicon"
dynamic = ["version"]
description = 'A natural language processing pipeline for neuroradiological reports'
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["NLP", "neuroradiology"]
authors = [
  { name = "Henry Watkins", email = "h.watkins@ucl.ac.uk" },
]
classifiers = [  "Programming Language :: Python"]

dependencies = [
  "spacy",
  "transformers",
  "torch",
  "datasets",
  "scikit-learn",
  "pandas",
  "numpy",
  "negspacy",
  "numba",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
]
